setup repo and verify pin api
